# VisiCalc

./: .gitignore  AnsiTerminal.cpp  AnsiTerminal.h  CMakeLists.txt  CONTRIBUTING.md  CV_PROJECT_SUMMARY.md  Cell.cpp  Cell.h  FileManager.cpp  FileManager.h  FormulaParser.cpp  FormulaParser.h  LICENSE  Makefile  README.md  Spreadsheet.cpp  Spreadsheet.h  a  a.csv  main.cpp
